# Simple-Opengl-Renderer

./: CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  Geometry.cpp  Geometry.h  IndexBuffer.cpp  IndexBuffer.h  Line.cpp  Line.h  Object3D.cpp  Object3D.h  Point.cpp  Point.h  README.md  SGL.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderMaterial.cpp  ShaderMaterial.h  Texture.cpp  Texture.h  TriMesh.cpp  TriMesh.h  Uniform.h  UniformValue.cpp  UniformValue.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp  stb_image.h
example/example-1/: CMakeLists.txt  main.cpp
example/example-TextureCube/: CMakeLists.txt  main.cpp
example/example-line/: CMakeLists.txt  main.cpp
example/example-points/: CMakeLists.txt  main.cpp
example/example-texture2d/: CMakeLists.txt  main.cpp
example/example-triangle/: CMakeLists.txt  main.cpp
sources/: Attrib.cpp  Attrib.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  DataBuffer.cpp  DataBuffer.h  Geometry.cpp  Geometry.h  IndexBuffer.cpp  IndexBuffer.h  Line.cpp  Line.h  Object3D.cpp  Object3D.h  Point.cpp  Point.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderMaterial.cpp  ShaderMaterial.h  Texture.cpp  Texture.h  TriMesh.cpp  TriMesh.h  Uniform.cpp  Uniform.h  UniformValue.cpp  UniformValue.h  VertexBuffer.cpp  VertexBuffer.h
